<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Prady on 23/02/23, 11:49 AM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 21/02/23, 4:53 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.initialActivities.firstLoginActivity.FirstLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/multi_language" />

        <TextView
            style="@style/BigHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="8dp"
            android:text="@string/please_select_your_language"
            android:textAlignment="textStart"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/abc"
                android:drawablePadding="16dp"
                android:layoutDirection="rtl"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/english"
                android:textSize="18sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_hindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/hindi_letter"
                android:drawablePadding="16dp"
                android:layoutDirection="rtl"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/hindi"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_continue"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>