<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Prady on 4/3/23, 12:45 PM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 4/3/23, 12:41 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authActivity.fragments.UserTypeFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/BigHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome to Ram Yash PG College !"
                android:textColor="?attr/colorTertiary" />

            <TextView
                style="@style/HeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_select_your_user_type" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_1"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="16dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#2DFFEB3B"
                app:cardCornerRadius="16dp"
                app:strokeColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/customer" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HeaderStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/customer" />

                        <TextView
                            style="@style/SubHeaderStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="Select this to get courier services."
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_2"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="16dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#23E91E63"
                app:cardCornerRadius="16dp"
                app:strokeColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/admin" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HeaderStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/department" />

                        <TextView
                            style="@style/SubHeaderStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="Select this to provide courier services to customer."
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_3"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="16dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:cardBackgroundColor="#2000BCD4"
                app:cardCornerRadius="16dp"
                app:strokeColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/depart" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HeaderStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/administrator" />

                        <TextView
                            style="@style/SubHeaderStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/select_this_to_get_administrator_access"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/btn_continue"
                app:iconGravity="end"
                app:icon="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>